# overlex

./: .gitignore  CHANGELOG.md  PRD.md  PROJECT_CONTEXT.md  README.md  SECURITY.md  install.ps1  package.json  plan.md  test.rs
.github/workflows/: release.yml
docs/: decisions.md
docs/changes/close-with-esc-setting/: plan.md
docs/changes/esc-key-fix/: plan.md
docs/changes/groq-integration/: plan.md
docs/changes/history-cache/: plan.md
docs/changes/history-window-and-per-profile-cache/: plan.md
docs/changes/ocr-hotkey-toggle/: plan.md
docs/changes/toggle-state-tracking/: plan.md
docs/changes/ui-redesign/: plan.md
docs/changes/write-hotkey-toggle/: plan.md
openspec/changes/engine-settings-redesign/: design.md  proposal.md  spec.md  tasks.md
openspec/changes/game-detection-profiles/: design.md  proposal.md  spec.md  tasks.md
openspec/changes/gemini-deepl-translation/: design.md  proposal.md  spec.md  tasks.md
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: capture.rs  commands.rs  game_detection.rs  history.rs  hotkeys.rs  lib.rs  main.rs  ocr.rs  settings.rs  tray.rs
src-tauri/src/translation/: chain.rs  deepl.rs  deepseek.rs  gemini.rs  google_gtx.rs  groq.rs  libretranslate.rs  mod.rs  mymemory.rs
src-tauri/tests/: translation_adapter_test.rs
src/freeze/: freeze.js  index.html
src/history/: history.css  history.js  index.html
src/result/: index.html  result.js
src/settings/: index.html  settings.js
src/write/: index.html  write.js
