[package]
name = "overlex"
version = "0.1.0"
edition = "2021"

[lib]
name = "overlex_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon", "image-png"] }
tauri-plugin-shell = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.12", features = ["json"] }
base64 = "0.22"
image = "0.25"
keyring = "3"
async-trait = "0.1"
windows = { version = "0.58", features = [
    "Win32_Foundation",
    "Win32_UI_WindowsAndMessaging",
    "Win32_UI_Input_KeyboardAndMouse",
    "Win32_Graphics_Gdi",
    "Win32_System_LibraryLoader",
    "Win32_System_Threading",
    "Media_Ocr",
    "Graphics_Imaging",
    "Storage_Streams",
    "Globalization",
    "Foundation",
]}

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
opt-level = "s"
strip = true